<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >

    <!-- 标题 -->
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:background="#008476"
        android:text="@string/constraintlayouttest"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 输入标签 -->
    <TextView
        android:id="@+id/inputLabel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="@string/input"
        android:textColor="#CDCDCD"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <!-- 输入框 -->
    <TextView
        android:id="@+id/inputDisplay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:background="#B9B997"
        android:gravity="center_vertical|end"
        android:padding="10dp"
        android:text="@string/_0_0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLabel" />

    <!-- 第一行按钮：7 8 9 • -->
    <Button
        android:id="@+id/btn7"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D4D5D5"
        android:text="@string/_7"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDisplay" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#D4D5D5"
        android:text="@string/_8"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/inputDisplay" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#D4D5D5"
        android:text="@string/_9"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/btnMultiply"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toBottomOf="@+id/inputDisplay" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#D4D5D5"
        android:text="@string/斜杠_除号"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/inputDisplay" />

    <!-- 第二行按钮：4 5 6 • -->
    <Button
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D4D5D5"
        android:text="@string/_4"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D4D5D5"
        android:text="@string/_5"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D4D5D5"
        android:text="@string/_6"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/btnDivide"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn9" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D4D5D5"
        android:text="@string/星号_乘号"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiply" />

    <!-- 第三行按钮：1 2 3 • -->
    <Button
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D4D5D5"
        android:text="@string/_1"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D4D5D5"
        android:text="@string/_2"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D4D5D5"
        android:text="@string/_3"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/btnEquals"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D4D5D5"
        android:text="@string/加号"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/btnDivide" />

    <!-- 第四行按钮：0 • < • ■ -->
    <Button
        android:id="@+id/btn0"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D4D5D5"
        android:text="@string/句点_小数点"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/btnDot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btnDot"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D4D5D5"
        android:text="@string/_0"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/btnBack"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D4D5D5"
        android:text="@string/等于号"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/btnSquare"
        app:layout_constraintStart_toEndOf="@+id/btnDot"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <Button
        android:id="@+id/btnSquare"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D4D5D5"
        android:text="@string/减号"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toBottomOf="@+id/btnEquals" />

</androidx.constraintlayout.widget.ConstraintLayout>