<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tab_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@drawable/tab_container_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- 卫星图片 -->
        <ImageView
            android:id="@+id/iv_satellite"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:src="@drawable/space_station_icon"
            app:layout_goneMarginStart="32dp"
            app:layout_goneMarginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_service_stations"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:text="@string/service_stations"
            android:gravity="center_vertical"
            android:textSize="16sp"
            app:layout_goneMarginStart="20dp"
            app:layout_goneMarginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_satellite" />

        <!-- 顶部火箭图片 -->
        <ImageView
            android:id="@+id/iv_arrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="100dp"
            android:src="@drawable/rocket_icon"
            app:layout_goneMarginStart="8dp"
            app:layout_goneMarginTop="24dp"
            app:layout_constraintStart_toEndOf="@id/iv_satellite"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_rocket"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:text="@string/flights"
            android:gravity="center_vertical"
            android:textSize="16sp"
            app:layout_goneMarginStart="24dp"
            app:layout_constraintStart_toEndOf="@id/tv_service_stations"
            app:layout_constraintTop_toBottomOf="@+id/iv_arrow"
            app:layout_constraintTop_toTopOf="@id/tv_service_stations" />


        <!-- 火星车 图片 -->
        <ImageView
            android:id="@+id/iv_mars"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="100dp"
            android:src="@drawable/rover_icon"
            app:layout_goneMarginStart="8dp"
            app:layout_goneMarginTop="24dp"
            app:layout_constraintStart_toEndOf="@id/iv_arrow"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_astronauts"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="60dp"
            android:text="@string/astronauts"
            android:gravity="center_vertical"
            android:textSize="16sp"
            app:layout_goneMarginStart="24dp"
            app:layout_constraintStart_toEndOf="@id/tv_rocket"
            app:layout_constraintTop_toBottomOf="@+id/iv_mars"
            app:layout_constraintTop_toTopOf="@id/tv_rocket" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- One Way 按钮 -->
    <Button
        android:id="@+id/tv_one_way"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:backgroundTint="#B76220"
        android:text="@string/one_way"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_goneMarginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />

    <!-- Travel 按钮 -->
    <Button
        android:id="@+id/btn_travel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#B76220"
        android:text="@string/travel"
        app:cornerRadius="0dp"
        app:layout_goneMarginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tv_one_way"
        app:layout_constraintTop_toBottomOf="@id/tv_one_way" />

    <!-- DCA 区域 -->
    <Button
        android:id="@+id/iv_dca"
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:layout_marginStart="28dp"
        android:backgroundTint="#2C663B"
        android:text="@string/dca"
        app:cornerRadius="0dp"
        app:layout_goneMarginStart="32dp"
        app:layout_goneMarginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="91dp"
        tools:ignore="MissingConstraints" />

    <!-- MARS 区域 -->

    <!-- 中间箭头图标 -->
    <Button
        android:id="@+id/iv_mars"
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:layout_marginStart="208dp"
        android:backgroundTint="#2C663B"
        android:text="@string/mars"
        app:cornerRadius="0dp"
        app:layout_goneMarginStart="32dp"
        app:layout_goneMarginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteY="91dp" />

    <ImageView
        android:id="@+id/iv_control"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/double_arrows"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"

        app:layout_goneMarginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="126dp"
        tools:ignore="MissingConstraints" />



    <!-- 大图片区域 -->
    <ImageView
        android:id="@+id/iv_galaxy"
        android:layout_width="94dp"
        android:layout_height="95dp"
        android:layout_marginEnd="140dp"
        android:src="@drawable/galaxy"
        app:layout_constraintBottom_toTopOf="@id/btn_depart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_goneMarginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.604" />

    <!-- 小火箭图标区域 -->
    <ImageView
        android:id="@+id/iv_little"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/rocket_icon"
        app:layout_constraintEnd_toStartOf="@+id/iv_galaxy"
        app:layout_goneMarginStart="8dp"
        app:layout_goneMarginTop="24dp"
        tools:layout_editor_absoluteY="378dp"
        tools:ignore="MissingConstraints" />

    <!-- 底部 DEPART 按钮 -->
    <Button
        android:id="@+id/btn_depart"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:backgroundTint="#2C663B"
        android:text="@string/depart"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_goneMarginBottom="16dp"
        app:layout_goneMarginEnd="16dp"
        app:layout_goneMarginStart="16dp"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>